--- a/src/languages/pt/card/front.html
+++ b/src/languages/pt/card/front.html
@@ -14,10 +14,10 @@
         {{/Is Audio Card}}
         {{#Is Audio Card}}
             {{^Is Vocabulary Card}}
-                {{Sentence Audio}}
+                {{editable:Sentence Audio}}
             {{/Is Vocabulary Card}}
             {{#Is Vocabulary Card}}
-                {{Word Audio}}
+                {{editable:Word Audio}}
             {{/Is Vocabulary Card}}
         {{/Is Audio Card}}
     </div>
