--- a/src/languages/yue/card/back.html
+++ b/src/languages/yue/card/back.html
@@ -19,6 +19,9 @@
         <div class="migaku-card-sentence">
             <div class="field" data-reading="yes" data-tone-coloring="yes">{{editable:Sentence}}</div>
         </div>
+        <div class="migaku-card-sentence-alternate">
+            <div class="field" data-reading="yes" data-tone-coloring="yes">{{editable:Alternate Sentence}}</div>
+        </div>
         <div class="migaku-card-translation">
             {{editable:Translation}}
         </div>
