[CHORE] Updated ankiweb description

--- a/ankiweb.html
+++ b/ankiweb.html
@@ -1,130 +1,67 @@
-<h2>About the Add-on</h2>
 
-<p>The Migaku Anki Add-on is a combination of all our previous addons and their features. But it is not only a
-    combination, we also simplified the set up and usage of the add-on to make it more accessible.</p>
+The Migaku Anki Add-on is a combination of all our previous addons and their features. But it is not only a
+combination, we also simplified the set up and usage of the add-on to make it more accessible.
 
-<p><b>Important:</b> In order to simplify the add-ons usage and setup, some functions were moved to the Migaku Browser
-    Extension and are now handled from there. If you don't have the Migaku Browser Extension installed, they will not
-    work. Below, those features are marked as such. If you want to know more about the Migaku Browser Extension you can
-    watch a summary of its most important features <a href="https://www.youtube.com/watch?v=67timS417Wg">here</a>.</p>
+<b>Important:</b> In order to simplify the add-ons usage and setup, some functions were moved to the Migaku Browser
+Extension and are now handled from there. If you don't have the Migaku Browser Extension installed, they will not
+work. Below, those features are marked as such. If you want to know more about the Migaku Browser Extension you can
+watch a summary of its most important features <a href="https://www.youtube.com/watch?v=67timS417Wg">here</a>.
 
 
-<h2>General Features</h2>
+<b>General Features</b>
 
 Migaku Editor
-<ul>
-    <li>In-place Editing <ul>
-            <li>Editing without having to open the separate editor window</li>
-        </ul>
-    </li>
-    <li>Persistent Editor Window <ul>
-            <li>Editor Window stays open and is automatically filled with the next card info while you review. Infos in
-                the editor window are hidden until the card is turned around.</li>
-        </ul>
-    </li>
-</ul>
-
+<ul><li>In-place Editing <ul><li>Editing without having to open the separate editor window</li></ul></li><li>Persistent Editor Window <ul><li>Editor Window stays open and is automatically filled with the next card info while you review. Infos inthe editor window are hidden until the card is turned around.</li></ul></li></ul>
 Migaku Retirement
-<ul>
-    <li>Set a retirement interval and control what happens to cards in each deck once they have reached that interval
-        <ul>
-            <li>A user may choose to delete all of their retired cards, add tags to the cards, suspend the cards, move
-                those cards to a "retirement deck," or do any combination of those options.
-            </li>
-        </ul>
-    </li>
-</ul>
-
+<ul><li>Set a retirement interval and control what happens to cards in each deck once they have reached that interval<ul><li>A user may choose to delete all of their retired cards, add tags to the cards, suspend the cards, move those cards to a "retirement deck," or do any combination of those options.</li></ul></li></ul>
 Migaku Vacation (will be implemented soon)
-<ul>
-    <li>Schedule vacations away from reviews</li>
-    <li>Optimize and smooth daily review counts</li>
-    <li>Taking a "Sick Day" and pushing all reviews one day into the future</li>
-    <li>Catching up slowly on overdue reviews using the “Catch-Up” feature</li>
-    <li>Studying cards that will be due in the future using the “Get-Ahead” feature</li>
-    <li>Maintain card ease</li>
-</ul>
-
+<ul><li>Schedule vacations away from reviews</li><li>Optimize and smooth daily review counts</li><li>Taking a "Sick Day" and pushing all reviews one day into the future</li><li>Catching up slowly on overdue reviews using the “Catch-Up” feature</li><li>Studying cards that will be due in the future using the “Get-Ahead” feature</li><li>Maintain card ease</li></ul>
 Migaku Flexible Grading
-<ul>
-    <li>Pass/Fail <ul>
-            <li>Reduces Ankis 4 buttons to 2, Pass and Fail.</li>
-        </ul>
-    </li>
-    <li>Maintain Ease Factor <ul>
-            <li>Upon failing a card, the ease factor of that card will remain the same.</li>
-        </ul>
-    </li>
-</ul>
-
+<ul><li>Pass/Fail <ul><li>Reduces Ankis 4 buttons to 2, Pass and Fail.</li></ul></li><li>Maintain Ease Factor <ul><li>Upon failing a card, the ease factor of that card will remain the same.</li></ul></li></ul>
 Migaku Dictionary (Migaku Browser Extension required)
-<ul>
-    <li>Look up words in multiple dictionaries at once. In Anki, as well as globally</li>
-    <li>Add definitions, images, Forvo audio and example sentences to cards with one click</li>
-</ul>
-
-
-<h2>Language Specific Features (Migaku Browser Extension required)</h2>
+<ul><li>Look up words in multiple dictionaries at once. In Anki, as well as globally</li><li>Add definitions, images, Forvo audio and example sentences to cards with one click</li></ul>
+<b>Language Specific Features (Migaku Browser Extension required)</b>
 
 General
-<ul>
-    <li>Play audio of all words by simply clicking on them</li>
-</ul>
-
+<ul><li>Play audio of all words by simply clicking on them</li></ul>
 Japanese
-<ul>
-    <li>Add pitch coloring to all words</li>
-    <li>Automatically add readings</li>
-    <li>Pitch graphes on hover</li>
-</ul>
-
+<ul><li>Add pitch coloring to all words</li><li>Automatically add readings</li><li>Pitch graphes on hover</li></ul>
 Chinese
-<ul>
-    <li>Add tone coloring to all words</li>
-    <li>Add Jyutping for Cantonese</li>
-    <li>Add Pinyin or Zhuyin for Mandarin</li>
-    <li>Convert all characters to the simplified or traditional variant</li>
-</ul>
-
+<ul><li>Add tone coloring to all words</li><li>Add Jyutping for Cantonese</li><li>Add Pinyin or Zhuyin for Mandarin</li><li>Convert all characters to the simplified or traditional variant</li></ul>
 German
-<ul>
-    <li>Add gender coloring to all words</li>
-    <li>Show part of speech and the dictionary from of the word on hover (to be implemented)</li>
-</ul>
-
+<ul><li>Add gender coloring to all words</li><li>Show part of speech and the dictionary from of the word on hover (to be implemented)</li></ul>
 French
-<ul>
-    <li>Add gender coloring to all words</li>
-    <li>Show part of speech and the dictionary from of the word on hover (to be implemented)</li>
-</ul>
-
+<ul><li>Add gender coloring to all words</li><li>Show part of speech and the dictionary from of the word on hover (to be implemented)</li></ul>
 Spanish
-<ul>
-    <li>Add gender coloring to all words</li>
-    <li>Show part of speech and the dictionary from of the word on hover (to be implemented)</li>
-</ul>
-
+<ul><li>Add gender coloring to all words</li><li>Show part of speech and the dictionary from of the word on hover (to be implemented)</li></ul>
 Portuguese
-<ul>
-    <li>Add gender coloring to all words</li>
-    <li>Show part of speech and the dictionary from of the word on hover (to be implemented)</li>
-</ul>
+<ul><li>Add gender coloring to all words</li><li>Show part of speech and the dictionary from of the word on hover (to be implemented)</li></ul>
 
+<b>How to install the Addon</b>
+If you haven't installed Anki yet, you can download it <a href="https://apps.ankiweb.net/">here</a>.
 
-<h2>How to install the Addon</h2>
-
-<p>If you haven't installed Anki yet, you can download it <a href="https://apps.ankiweb.net/">here</a>.</p>
-
-<p>After you are done installing Anki, open it. Next, navigate to |Tools|>|Add-ons|.</p>
+After you are done installing Anki, open it. Next, navigate to |Tools|>|Add-ons|.
 
 <img src="https://i.imgur.com/t3vr2E8.png" alt="Navigate to Add-ons" />
 
-<p>In the window that opens, press |Get Add-ons…|.</p>
+In the window that opens, press |Get Add-ons…|.
 
 <img src="https://i.imgur.com/nd5DJt4.png" alt="Press Get Add-ons" />
 
-<p>In the window that opens, enter the code at the end of this page and press |OK|.</p>
+In the window that opens, enter the code at the end of this page and press |OK|.
 
 <img src="https://i.imgur.com/FHuEEUY.png" alt="Press Get Add-ons" />
 
-<p>After the installation is finished, restart Anki and you are done!</p>
+After the installation is finished, restart Anki and you are done!
+
+
+<b>About Migaku:</b>
+<a href="https://www.migaku.io" rel="nofollow">Our Website</a>
+<a href="https://www.youtube.com/c/ImmerseWithYoga" rel="nofollow">Migaku Youtube Channel</a>
+<a href="https://twitter.com/MigakuOfficial" rel="nofollow">Migaku Twitter</a>
+
+<b>Support What We Do:</b>
+
+Please consider giving a <img src="https://i.imgur.com/ENoAp3A.png"> <a href="https://ankiweb.net/shared/review/1872210448" rel="nofollow">thumbs up</a>!
+
+<a href="https://www.patreon.com/Migaku" rel="nofollow"><img src="https://i.imgur.com/qkNP40F.png"></a>
