--- a/src/languages/ja/card/back.html
+++ b/src/languages/ja/card/back.html
@@ -33,7 +33,7 @@
         </div>
 
         <div class="migaku-card-examples migaku-indented">
-            {{editable:Example Sentences}}
+            <div class="field" data-popup="yes" data-furigana="yes" data-pitch-coloring="yes" data-pitch-shapes="yes">{{editable:Example Sentences}}</div>
         </div>
         <div class="migaku-card-definitions migaku-indented">
             <div class="field" data-popup="yes" data-furigana="yes" data-pitch-coloring="no" data-pitch-shapes="no">{{editable:Definitions}}</div>
