--- a/src/languages/yue/card/back.html
+++ b/src/languages/yue/card/back.html
@@ -39,7 +39,9 @@
     </div>
 
     <div class="migaku-card-examples migaku-indented">
-      {{editable:Example Sentences}}
+      <div class="field" data-reading="yes" data-tone-coloring="yes">
+        {{editable:Example Sentences}}
+      </div>
     </div>
     <div class="migaku-card-definitions migaku-indented">
       <div class="field" data-reading="hover" data-tone-coloring="hover">
