--- a/src/languages/zh_CN/card/back.html
+++ b/src/languages/zh_CN/card/back.html
@@ -54,7 +54,14 @@
     </div>
 
     <div class="migaku-card-examples migaku-indented">
-      {{editable:Example Sentences}}
+      <div
+        class="field"
+        data-reading="yes"
+        data-reading-type="pinyin"
+        data-tone-coloring="yes"
+      >
+        {{editable:Example Sentences}}
+      </div>
     </div>
     <div class="migaku-card-definitions migaku-indented">
       <div
