--- a/src/languages/es/card/back.html
+++ b/src/languages/es/card/back.html
@@ -33,7 +33,7 @@
         </div>
 
         <div class="migaku-card-examples migaku-indented">
-            {{editable:Example Sentences}}
+            <div class="field" data-popup="yes" data-gender-coloring="yes">{{editable:Example Sentences}}</div>
         </div>
         <div class="migaku-card-definitions migaku-indented">
             <div class="field" data-popup="yes">{{editable:Definitions}}</div>
