--- a/src/languages/ja/card/support.html
+++ b/src/languages/ja/card/support.html
@@ -206,7 +206,7 @@ function parseSyntax(text) {
     let ret = [];
 
     // without workarounds for missing spaces: /{([^]*?)}|((\S*)\[(.*?)\](\S*))|([^ {]+)/gm
-    const syntax_re = new RegExp(/{([^]*?)}|(([\S　]*)\[(.*?)\](\S*))|([^ {]+)/gm);
+    const syntax_re = new RegExp(/{([^]*?)}|(([\S　]*)\[(.*?)\](\S*))|([^ \u00A0{]+)/gm);
 
     const ja_text_re = new RegExp(/[\u3041-\u3096\u30A0-\u30FF\u3400-\u4DB5\u4E00-\u9FCB\uF900-\uFA6A\u2E80-\u2FD5\uFF65-\uFF9F\々]/m);
     
@@ -244,6 +244,7 @@ function parseSyntax(text) {
                 }
 
                 if (i > 0) {
+                    console.log('PLN', pre_text_match.substring(0, i));
                     ret.push({
                         type: 'plain',
                         text: pre_text_match.substring(0, i)
@@ -251,6 +252,8 @@ function parseSyntax(text) {
                 }
 
                 const pre_text = pre_text_match.substring(i);
+
+                console.log('SYN', pre_text, match[5]);
 
                 ret.push({
                     type: 'syntax',
@@ -263,6 +266,7 @@ function parseSyntax(text) {
             }
             // plain segment
             else if (match[6]) {
+                console.log('PLN', match[6]);
                 ret.push({
                     type: 'plain',
                     text: match[6]
