--- a/src/toolbar/toolbar.html
+++ b/src/toolbar/toolbar.html
@@ -20,7 +20,7 @@
   MigakuToolbar.activate = (info) => {
     MigakuToolbar.refresh(info)
     const toolbar = document.getElementById('migakuToolbar')
-    toolbar.style.display = 'block'
+    toolbar.style.display = 'flex'
     toolbar.addEventListener('click', openAddCards)
   }
 
@@ -36,6 +36,11 @@
 </script>
 
 <div id="migakuToolbar" style="display: none; font-size: 75%; margin: 5px; cursor: pointer;">
-  <div>Type: <strong id="migakuNotetype"></strong></div>
-  <div>Deck: <strong id="migakuDeck"></strong></div>
+  <div>
+    <small>Target for Migaku Cards:&nbsp;&nbsp;</small>
+  </div>
+  <div>
+    <div>Type: <strong id="migakuNotetype"></strong></div>
+    <div>Deck: <strong id="migakuDeck"></strong></div>
+  </div>
 </div>
