feat: activate deck/type in Migaku menu bar

--- a/src/toolbar/toolbar.html
+++ b/src/toolbar/toolbar.html
@@ -36,11 +36,12 @@
 </script>
 
 <div id="migakuToolbar" style="display: none; font-size: 75%; margin: 5px; cursor: pointer;">
-  <div>
+  <!-- We put it into the Migaku toolbar instead-->
+  <!-- <div>
     <small>Target for Migaku Cards:&nbsp;&nbsp;</small>
   </div>
   <div>
     <div>Type: <strong id="migakuNotetype"></strong></div>
     <div>Deck: <strong id="migakuDeck"></strong></div>
-  </div>
+  </div> -->
 </div>
