feat: add backwards compatibility with Migaku-Japanese

--- a/src/languages/ja/card/support.html
+++ b/src/languages/ja/card/support.html
@@ -451,6 +451,11 @@
           text_content.appendChild(ruby_elem);
 
           for (const segment of segments) {
+            if (field_settings.furigana === "replace") {
+              ruby_elem.appendChild(document.createTextNode(segment.reading))
+              continue
+            }
+
             ruby_elem.appendChild(document.createTextNode(segment.text));
 
             const rt_elem = document.createElement('rt');
@@ -499,7 +504,7 @@
           const popup_text =
             syntax_element.dict_form ||
             (syntax_element.reading || syntax_element.word_pre) +
-              syntax_element.word_post;
+            syntax_element.word_post;
 
           if (popup_text) {
             const popup_hover_box = document.createElement('div');
@@ -631,6 +636,67 @@
       }
     }
 
+    function migakuJapaneseDisplayTypeToFieldSettings(displayType) {
+      switch (displayType) {
+        case "hover":
+          return {
+            popup: 'yes',
+            pitch_coloring: 'no',
+            pitch_shapes: 'no',
+            furigana: 'hover',
+          }
+        case "reading":
+          return {
+            popup: 'yes',
+            pitch_coloring: 'no',
+            pitch_shapes: 'no',
+            furigana: 'replace',
+          }
+        case "kanji":
+          return {
+            popup: 'yes',
+            pitch_coloring: 'no',
+            pitch_shapes: 'no',
+            furigana: 'no',
+          }
+        case "coloredkanji":
+          return {
+            popup: 'yes',
+            pitch_coloring: 'yes',
+            pitch_shapes: 'no',
+            furigana: 'no',
+          }
+        case "kanjireading":
+          return {
+            popup: 'yes',
+            pitch_coloring: 'no',
+            pitch_shapes: 'no',
+            furigana: 'yes',
+          }
+        case "coloredkanjireading":
+          return {
+            popup: 'yes',
+            pitch_coloring: 'yes',
+            pitch_shapes: 'no',
+            furigana: 'yes',
+          }
+        case "coloredhover":
+          return {
+            popup: 'yes',
+            pitch_coloring: 'hover',
+            pitch_shapes: 'no',
+            furigana: 'hover',
+          }
+        case "coloredreading":
+          return {
+            popup: 'yes',
+            pitch_coloring: 'yes',
+            pitch_shapes: 'no',
+            furigana: 'replace',
+          }
+      }
+    }
+
     function handleField(field) {
       // Ignore field if it doesn't contain syntax
       const syntax_test_re = /[\{\}\[\]]/;
@@ -638,24 +704,25 @@
         return;
       }
 
-      const field_settings = {
-        popup: field.getAttribute('data-popup') || 'no',
-        pitch_coloring: field.getAttribute('data-pitch-coloring') || 'no',
-        pitch_shapes: field.getAttribute('data-pitch-shapes') || 'no',
-        furigana: field.getAttribute('data-furigana') || 'no',
-      };
+      const field_settings =
+        field.hasAttribute('display-type')
+          ? migakuJapaneseDisplayTypeToFieldSettings(field.getAttribute('display-type'))
+          : {
+            popup: "no",
+            pitch_coloring: "no",
+            pitch_shapes: "no",
+            furigana: "no",
+          }
 
-      if (
-        field_settings.popup === 'yes' &&
-        field_settings.furigana === 'hover'
-      ) {
-        field_settings.furigana = 'hidden';
-      }
+      if (field.hasAttribute('data-popup')) field_settings.popup = field.getAttribute('data-popup');
+      if (field.hasAttribute('data-pitch-coloring')) field_settings.pitch_coloring = field.getAttribute('data-pitch-coloring');
+      if (field.hasAttribute('data-pitch-shapes')) field_settings.pitch_shapes = field.getAttribute('data-pitch-shapes');
+      if (field.hasAttribute('data-furigana')) field_settings.furigana = field.getAttribute('data-furigana');
 
       handleFieldTextNodes(field, field_settings);
     }
 
-    const fields = document.querySelectorAll('.field');
+    const fields = document.querySelectorAll('.field, .wrapped-japanese');
 
     for (field of fields) {
       handleField(field);
